# tatva-coloring

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  release-please-config.json
.github/workflows/: maturin.yml  release.yml
python/tatva_coloring/: __init__.py  _base.py
src/: lib.rs
